kubernetes/namespaces/kube-system/traefik/traefik2.yml
###############################################################################
# Default TLS store for Traefik 2 ingress routes
#
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: headers-default
  namespace: kube-system
  labels:
    # The name of the application
    app.kubernetes.io/name: traefik2
    # The component within the architecture
    app.kubernetes.io/component: reverse-proxy
    # The name of a higher level application this one is part of
    app.kubernetes.io/part-of: network-services
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    customFrameOptionsValue: SAMEORIGIN
    customRequestHeaders:
      X-Forwarded-Proto: https
