kubernetes/namespaces/kube-system/traefik/traefik-dashboard.yml
###############################################################################
# Sensitive credentials for Traefik dashboard
#
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-basicauth
  namespace: kube-system
  labels:
    # The name of the application
    app.kubernetes.io/name: traefik-dashboard
    # The component within the architecture
    app.kubernetes.io/component: reverse-proxy
    # A unique name identifying the instance of an application
    app.kubernetes.io/instance: traefik
    # The name of a higher level application this one is part of
    app.kubernetes.io/part-of: network-services
spec:
  basicAuth:
    secret: traefik-dashboard
###############################################################################
# Route configuration for Traefik dashboard
#
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik-external
  labels:
    # The name of the application
    app.kubernetes.io/name: traefik-dashboard
    # The component within the architecture
    app.kubernetes.io/component: reverse-proxy
    # A unique name identifying the instance of an application
    app.kubernetes.io/instance: traefik
    # The name of a higher level application this one is part of
    app.kubernetes.io/part-of: network-services
spec:
  entryPoints:
    - websecure
  tls: {}
  routes:
    - match: Host(`${TRAEFIK_DASHBOARD_DOMAIN}`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      middlewares:
        - name: traefik-dashboard-basicauth
      services:
        - kind: TraefikService
          name: api@internal
